fixing styling for the pills on smaller devices

--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -26,6 +26,7 @@
   border: 3px solid var(--primary);
   color: var(--primary);
   background-color: var(--primary-light);
+  justify-content: center;
 
   &.active {
     cursor: pointer;
@@ -34,7 +35,6 @@
       background-color: rgba(213,242,232,255);
     }
   }
-
 }
 
 // LINKS
@@ -65,4 +65,31 @@
 .link-small {
   // text-underline-offset: 8px;
   text-underline-offset: 0.45rem;
+}
+
+// SKILLS STYLES
+.skills-container {
+    ul {
+        list-style-type: none;
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        padding: 1rem;
+        justify-content: center;
+
+        @media (max-width: 416px) {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(140px, max-content));
+        }
+
+        li {
+            display: flex;
+            border: 3px solid var(--primary);
+            color: var(--primary);
+            font-weight: 400;
+            background-color: var(--primary-light);
+            border-radius: 2rem;
+            padding: 0.75rem;
+        }
+    }
 }
