--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -175,28 +175,6 @@ section {
     }
   }
 
-  // SKILLS STYLES
-  #skills-container {
-    ul {
-      list-style-type: none;
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      padding: 1rem;
-      justify-content: center;
-
-      li {
-        display: flex;
-        border: 3px solid var(--primary);
-        color: var(--primary);
-        font-weight: 400;
-        background-color: var(--primary-light);
-        border-radius: 2rem;
-        padding: 0.75rem;
-      }
-    }
-  }
-
   // TIMELINE STLYES
   #timeline-container {
     margin-top: 2rem;
