--- a/client/src/styles/components/_portfolio_item.scss
+++ b/client/src/styles/components/_portfolio_item.scss
@@ -6,15 +6,6 @@
   }
 }
 
-ul {
-  list-style-type: none;
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  padding: 1rem 1rem;
-  justify-content: center;
-}
-
 .portfolio-copy {
   line-height: 2.5rem;
 }
